OBJMesh: Add new shaders and option to render only one hemisphere
While at it add scalebar option to viewe3D scene